Upgraded everything from boto2 to boto3.

--- a/csd3-side/bucket_contents.ipynb
+++ b/csd3-side/bucket_contents.ipynb
@@ -2,43 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "cd736e47-9104-40df-a999-6a88e805b548",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "import bucket_manager as bm\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import boto3\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
+   "id": "b573b482-79d4-493b-9fde-6058ca21d66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_keys(json_file):\n",
+    "\twith open(json_file, 'r') as keyfile:\n",
+    "\t\tkeys = json.load(keyfile)\n",
+    "\treturn keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "610c8039-7f83-47e8-8762-6375038ec984",
    "metadata": {},
    "outputs": [],
    "source": [
     "s3_host = 'echo.stfc.ac.uk'\n",
-    "keys = bm.get_keys(os.sep.join([os.environ['HOME'],'lsst_keys.json']))\n",
+    "keys = get_keys(os.sep.join([os.environ['HOME'],'lsst_keys.json']))\n",
     "access_key = keys['access_key']\n",
     "secret_key = keys['secret_key']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b94bb9f0-93fc-4e89-b5a8-d8aae8e87b10",
+   "execution_count": 43,
+   "id": "fb3207d9-c1dc-4dc0-836b-931a20363045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = bm.get_client(access_key, secret_key, s3_host)"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
+   "id": "36addfd6-672c-4b13-b1bb-1e8d539d619e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = boto3.Session()\n",
+    "s3 = session.resource(\n",
+    "        service_name='s3',\n",
+    "        aws_access_key_id=access_key,\n",
+    "        aws_secret_access_key=secret_key,\n",
+    "        endpoint_url=f'https://{s3_host}',\n",
+    "        verify=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "883cba80-0eed-4e7b-afd6-4974130a3584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSST-IR-FUSION\n",
+      "LSST-IR-FUSION_gen3_conversion\n",
+      "csd3-backup-test\n",
+      "dmu4\n",
+      "lsst-dac\n",
+      "lsst-drp-config\n",
+      "lsst-test\n",
+      "lsst-test-3\n",
+      "lsst-test2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for b in s3.buckets.all():\n",
+    "    print(b.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "e14f321d-28cd-4b3c-95a4-aeccdfb6f32e",
    "metadata": {},
    "outputs": [],
@@ -48,78 +107,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "514c3dbe-8276-4f10-9a6f-af985e359c39",
+   "execution_count": 47,
+   "id": "d195b2a0-9947-42a1-9fb0-55195ee230ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LSST-IR-FUSION',\n",
-       " 'LSST-IR-FUSION_gen3_conversion',\n",
-       " 'csd3-backup-test',\n",
-       " 'dmu4',\n",
-       " 'lsst-dac',\n",
-       " 'lsst-drp-config',\n",
-       " 'lsst-test',\n",
-       " 'lsst-test-3',\n",
-       " 'lsst-test2']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bm.bucket_list(client)"
+    "bucket = s3.Bucket(bucket_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b2cb6f52-d8df-4a06-accb-d8b40ed2a174",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ir-mcka1/miniconda3/lib/python3.11/site-packages/urllib3/connectionpool.py:1061: InsecureRequestWarning: Unverified HTTPS request is being made to host 'echo.stfc.ac.uk'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "response = client.list_objects(Bucket=bucket_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "33b52ff8-e0f1-408c-a0df-a2d4406fade4",
+   "execution_count": 49,
+   "id": "95e1985d-2090-4990-b5e3-0f15240369a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lsst-ir-fusion--f-files.csv\t2024-02-23T16:11:29.440000+00:00\t98 B\n"
+      "ip005-ras81-lsst-ir-fusion-dmu3-files.csv\n",
+      "ip005-ras81-lsst-ir-fusion/dmu3/data/XMMFULL_DR2_MASKVISTA_HSC-I_2.0as_IRAC2.8as_2020_05_26.fits\n",
+      "ip005-ras81-lsst-ir-fusion/dmu3/data/XMMFULL_DR2_MASKVISTA_HSC-I_2.0as_IRAC2.8as_2020_05_26.fits.checksum\n",
+      "ip005-ras81-lsst-ir-fusion/dmu3/data/XMMFULL_DR2_MASKVISTA_Ks_2.0as_IRAC2.8as_2020_06_01.fits\n",
+      "ip005-ras81-lsst-ir-fusion/dmu3/data/XMMFULL_DR2_MASKVISTA_Ks_2.0as_IRAC2.8as_2020_06_01.fits.checksum\n",
+      "ip005-ras81-lsst-ir-fusion/dmu3/readme.md\n",
+      "ip005-ras81-lsst-ir-fusion/dmu3/readme.md.checksum\n"
      ]
     }
    ],
    "source": [
-    "for S3_object in response['Contents']:\n",
-    "    print(f\"{S3_object['Key']}\\t{S3_object['LastModified'].isoformat()}\\t{S3_object['Size']} B\")"
+    "try:\n",
+    "    for ob in bucket.objects.all():\n",
+    "        print(ob.key)\n",
+    "except Exception as e:\n",
+    "    if '(NoSuchBucket)' in str(e).split():\n",
+    "        print('NoSuchBucket')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d257d20-47cc-4b40-862b-48a1089b20be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
