list and download backup logs

--- a/csd3-side/notebooks/transfer_speeds_collate.ipynb
+++ b/csd3-side/notebooks/transfer_speeds_collate.ipynb
@@ -2348,6 +2348,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noncollated_df = logs_df[logs_df['Collated'] == False]\n",
+    "collated_df = logs_df[logs_df['Collated'] == True]\n",
+    "noncompressed_df = collated_df[collated_df['Compressed'] == False]\n",
+    "compressed_df = collated_df[collated_df['Compressed'] == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
