--- a/csd3-side/notebooks/download_swift_creds.ipynb
+++ b/csd3-side/notebooks/download_swift_creds.ipynb
@@ -7,9 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
-    "from datetime import datetime\n",
     "import boto3\n",
     "import json"
    ]
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f6f479af-b318-4a9f-83cb-f8089aefccc4",
    "metadata": {},
    "outputs": [],
@@ -69,43 +67,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "89cf2f66-02f0-4e33-b68c-703aa4836e97",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'lsst-swift-credentials.json'"
+       "datetime.datetime(2024, 11, 13, 11, 44, 24, tzinfo=tzutc())"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj.key"
+    "obj.last_modified"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "23875d6a-caec-42e9-81bd-475a5892db91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dave/miniconda3/envs/lsst-uk/lib/python3.10/site-packages/urllib3/connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'echo.stfc.ac.uk'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n",
+      "/home/dave/miniconda3/envs/lsst-uk/lib/python3.10/site-packages/urllib3/connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'echo.stfc.ac.uk'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "obj.download_file('/'.join([os.environ['HOME'],obj.key]))"
+    "obj.download_file('/'.join([os.environ['HOME'],'keys',obj.key]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c2a0b48b-ef01-4e1f-bfdf-6a819d7594a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chmod('/'.join([os.environ['HOME'],obj.key]),0o600)"
+    "os.chmod('/'.join([os.environ['HOME'],'keys',obj.key]),0o600)"
    ]
   },
   {
@@ -119,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lsst-uk",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
