finished versioning actions

--- a/csd3-side/notebooks/swift.ipynb
+++ b/csd3-side/notebooks/swift.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<swiftclient.client.Connection at 0x7f45b8b8b160>"
+       "<swiftclient.client.Connection at 0x7f4986e0c6a0>"
       ]
      },
      "execution_count": 3,
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<swiftclient.service.SwiftService at 0x7f45941f4d00>"
+       "<swiftclient.service.SwiftService at 0x7f49742c0f40>"
       ]
      },
      "execution_count": 4,
@@ -247,13 +247,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Object GET failed: https://s3.echo.stfc.ac.uk/swift/v1/test-large-file/butler_full_20221201/csv/viking/HSC_G/9074/collated_0.zip 404 Not Found   b'NoSuchKey' (txn: tx0000000000000246b655f-0067363324-2f4af1205-default)\n"
-     ]
-    },
-    {
      "ename": "",
      "evalue": "",
      "output_type": "error",
@@ -266,10 +259,10 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    bm.download_file_swift(swift, bucket_name, 'butler_full_20221201/csv/viking/HSC_G/9074/collated_0.zip', os.path.expanduser('~/csv/viking/HSC_G/9074/collated_0.zip'))\n",
-    "except Exception as e:\n",
-    "    print(f'Error: {e}')"
+    "# try:\n",
+    "#     bm.download_file_swift(swift, bucket_name, 'butler_full_20221201/csv/viking/HSC_G/9074/collated_0.zip', os.path.expanduser('~/csv/viking/HSC_G/9074/collated_0.zip'))\n",
+    "# except Exception as e:\n",
+    "#     print(f'Error: {e}')"
    ]
   },
   {
@@ -315,24 +308,36 @@
    "execution_count": null,
    "id": "d34d0f2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6442450944\n",
+      "0 2147483648\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "segment_size = 2*1024**3 # 2GiB\n",
     "\n",
     "with open(large_file_path, 'rb') as lf:\n",
+    "    lf_bytes = lf.read()\n",
     "    file_size = len(lf.read())\n",
     "    n_segments = int(np.ceil(file_size / segment_size))\n",
     "    print(n_segments)\n",
     "    print(file_size)\n",
-    "    lf.seek(0)\n",
-    "    segments = []\n",
-    "    for i in range(n_segments):\n",
-    "        start = i * segment_size\n",
-    "        end = min(start + segment_size, file_size)\n",
-    "        print(start, end)\n",
-    "        segment_number = i + 1\n",
-    "        print(segment_number)\n",
-    "        # segments.append(lf.read()[start:end])\n",
+    "\n",
+    "segments = [lf_bytes for i in range(n_segments)]\n",
+    "    start = i * segment_size\n",
+    "    end = min(start + segment_size, file_size)\n",
+    "    print(start, end)\n",
+    "    segment_number = i + 1\n",
+    "    print(segment_number)\n",
+    "    with open(large_file_path, 'rb') as lf:\n",
+    "        segments.append(lf.read()[start:end])\n",
     "        # segment_objects = [ swift_service.SwiftUploadObject(bucket_name, f'{large_file_path}_segmented_{segment_number}', contents=segment, content_type='bytes') for segment_number, segment in enumerate(segments) ]\n",
     "\n",
     "    # swift_service.upload(bucket_name, segment_objects, options={\n",
